[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ProjectileNPC.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.9617, 15.494 )

[sub_resource type="Animation" id=1]
resource_name = "Move"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 3 ]
}

[node name="ProjectileNPC" type="Node2D" groups=[
"black_holeable",
"npc",
]]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 4
frame = 3
region_enabled = true
region_rect = Rect2( 370, 270, 60, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
